syntax ="proto3";

package favorite;
option go_package=".";

message FavoriteActionReq{
  uint64 user_id=1;
  uint64 Article_id=2;
  uint32 action_type=3; //0是收藏1是取消收藏
}

message FavoriteActionResp{
  bool success=1;
}
message  FavoriteListReq{
  uint64 user_id=1;
  int64 page=2;
  int64 page_size=3;
}
message FavoriteItem{
  uint64 Article_id=1;
}
message FavoriteListResp{
  repeated FavoriteItem list=1;
  int64 total=2;
}
service FavoriteService{
  rpc FavoriteAction(FavoriteActionReq) returns (FavoriteActionResp);
  rpc GetFavoriteList(FavoriteListReq) returns (FavoriteListResp);
}